
####   Don't forget to change the version number in configure.ac!   ####

26 Sep 2004 Fix segfault when multiple ckd files for dasd volume - Greg Smith
26 Sep 2004 Fix segfault when no cckd shadow file - Greg Smith
24 Sep 2004 Remove (most) int/ptr mismatch warnings for 64 bit machines
            tentative x86_64 support in autoconf
            prevent redefining "ffs" if built-in (for non-ia32) - Ivan Warren
24 Sep 2004 Tapecopy: progress msgs for external gui -- Fish
23 Sep 2004 Restore '-Wall -W' flags to gcc, Pass along CFLAGS to configure
            Eliminated all but 8 warnings -- Ivan Warren
22 Sep 2004 Fix tapecopy -- Fish
21 Sep 2004 cckd `sf-xxx force' command, cckd rewrite - Greg Smith
21 Sep 2004 Performance enhancement for multi-byte opcodes - Greg Smith
21 Sep 2004 Performance enhancement for load/store multiple type
            instructions (LCTL STCTL LMD LMH LMG STCTG LCTLG STMG
            STMH LAMY LMY STAMY STMY LAM LM STAM STM) - Greg Smith
21 Sep 2004 Performance enhancement for BCR, BRC, BRCL -
            inspired by Bernard by Greg Smith
21 Sep 2004 Fix CKD sense codes - Tomas by Greg Smith
19 Sep 2004 Fix/enhance SCSI tape display/mount msgs - Fish
15 Sep 2004 Enable pentium4 specifics for gcc. Fixes
                - SIGFPE in CFEBR (due to possible bug in feclearexcept)
                - Allow use of assisted MEMCPY/MEMSET/etc.. for P4
                - ./configure ... --host|--build=pentium4|i786-<os>
                  - Ivan Warren
12 Sep 2004 Fix crash in CTCI_Query when device group incomplete - Fish
06 Sep 2004 emulated positioning error fix for read blockid - Fish
05 Sep 2004 tapedev.c/scsiptape.h: blockid s/b maintained by media handlers,
            minor tweak to when scsi automount thread started, fthreads.h:
            change default fthreads mutex type from recursive to errorcheck
            to prevent unintended introduction of deadlock situations due